# kb_management

./: Dockerfile  README.md  backup.sql  pyproject.toml  requirements.txt
app01/: apps.py  consumer.py  models.py  routing.py  scheduler.py  tasks.py  views.py
app01/migrations/: 0001_initial.py  0002_auto_20240531_1647.py  0003_alter_book_id.py  0004_auto_20240531_1731.py  0005_msuser_organization.py  0006_auto_20240615_2240.py  0007_auto_20240616_1728.py  0008_notification.py  0009_alter_jsonfile_modified_by.py  0010_csvfile.py  0011_delete_notification.py  0012_auto_20240616_2119.py  0013_auto_20240618_1453.py  0014_alter_msuser_password.py  0015_runningtask.py  0016_runningtask_status.py
bms/: asgi.py  es_client.py  settings.py  urls.py  wsgi.py
templates/: login.html  notebook_config.html  register.html  show_visual.html  user_runsett.html  webpage_config.html
